...
                onFavoriteIconClicked = onFavoriteIconClicked,
                navigateToDetail = navigateToDetail
            )
        } else {
            EmptyScreen(
                modifier = Modifier
                    .testTag("emptyList")

            )
        }
    }
}

...
            end = MediumPadding2,
            bottom = MediumPadding2,
            top = contentPaddingTop
        ),
        verticalArrangement = Arrangement.spacedBy(MediumPadding2),
        modifier = modifier
            .testTag("lazy_list")
    ) {
        items(listMovie, key = { it.id }) { item ->
            MovieCard(
                id = item.id,
                title = item.title,
                description = item.description,
...
