...
                ),
                title = {},
                navigationIcon = {
                    IconButton(
                        onClick = navigateBack,
                        modifier = Modifier
                            .testTag("back_home")
                    ) {
                        Icon(
                            painter = painterResource(id = R.drawable.ic_arrow_back),
                            contentDescription = stringResource(R.string.back),
                            tint = MaterialTheme.colorScheme.primary
                        )
...

                    IconButton(
                        onClick = {
                            onFavoriteButtonClicked(id, isFavorite)
                        },
                        modifier = Modifier
                            .testTag("favorite_detail_button")
                    ) {
                        Icon(
                            imageVector = if (!isFavorite) Icons.Default.FavoriteBorder else Icons.Default.Favorite,
                            contentDescription = if (!isFavorite) stringResource(R.string.add_favorite) else stringResource(
                                R.string.delete_favorite
                            ),
...
